# KCSE-for-kcd2

./: README.md
.buildenv/: CMakeLists.txt
src/: EventDispatcher.cpp  EventDispatcher.h  Interfaces.cpp  Interfaces.h  PluginManager.cpp  PluginManager.h  TaskInterface.cpp  TaskInterface.h  dllmain.cpp
src/dll_proxy/: dinput8_proxy.cpp  dinput8_proxy.h
